<resources>
    <string name="app_name">Android Studies Project</string>
    <string name="btnTest">Altera Texto</string>
    <string name="btnToSecond">Para Segunda Tela</string>
    <string name="btnBack">Voltar</string>

    // Strings para tela de formulário
    <string name="btnFormEx">Para Tela de Formulários</string>
    <string name="editTxtName">Nome</string>
    <string name="editTxtJob">Profissão</string>
    <string name="btnAddPersonalInfo">Adicionar dados</string>
    <string name="txtUnableMessage">Complete os campos antes de receber a mensagem</string>

    // Strings para segunda tela
    <string name="switchMessage">Mostrar mensagem</string>
    <string name="txtSSMessage1">Esperando a ação do Switch</string>
    <string name="txtSSMessage2">Switch funcionando com sucesso</string>

    //Strings para alternancia de mensagem na primeira screen
    <string name="txt1">Olá, pressione o botão.</string>
    <string name="txt2">Obrigado, você tocou no botão!</string>
    <string name="txt3">Nossa! Gostou de pressionar o botão :)</string>

    //String para Image Toast
    <string name="btnToImageScreen">Para Tela com Imagem</string>
    <string name="txtToastTest">Você tocou na imagem!</string>
    <string name="btnToGallery">Para Galeria</string>

    //String for LayoutTest Activity
    <string name="btnToLayoutPage">Para janela de teste de Layouts.</string>
    <string name="btnOne">Alterar texto ao lado</string>
    <string name="txtOne1">Esperando botão</string>
    <string name="txtOne2">Ok, funcionou</string>
    <string name="swtOne">Switch!!</string>
    <string name="txtSwtOne1">Inativo</string>
    <string name="txtSwtOne2">Ativo!</string>
    <string name="checkBoxOne">Marque aqui.</string>
    <string name="txtCheckBoxOne1">Não marcado</string>
    <string name="txtCheckBoxOne2">Marcado!</string>
</resources>
