<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LayoutStudy">

    <Button
        android:id="@+id/btnBackLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <LinearLayout
        android:id="@+id/LinearVerticalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|fill_horizontal|top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/LinearHorizontalLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|top"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnOne" />

            <TextView
                android:id="@+id/txtBtnOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txtOne1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearHorizontalLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|top"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/swtOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swtOne" />

            <TextView
                android:id="@+id/txtSwtOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txtSwtOne1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearHorizontalLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|top"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkBoxOne" />

            <TextView
                android:id="@+id/txtCheckBoxOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txtCheckBoxOne1" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>