<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Olá, pressione o botão."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000000" />

    <Button
        android:id="@+id/btnTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnTest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTexto"
        app:layout_constraintVertical_bias="0.100000000" />

    <Button
        android:id="@+id/btnToSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnToSecond"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTest"
        app:layout_constraintVertical_bias="0.100000000" />

    <Button
        android:id="@+id/btnToForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnFormEx"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnToSecond"
        app:layout_constraintVertical_bias="0.100000000" />

</android.support.constraint.ConstraintLayout>